# pact

./: README.md  pyproject.toml
src/pact/: __init__.py  _base.py  _exceptions.py  actor.py  dispatchers.py  messages.py
tests/: test_actor.py  test_mailbox.py
